[gd_scene load_steps=11 format=3 uid="uid://bqrbvma6mb672"]

[ext_resource type="Script" path="res://Scripts/reception.gd" id="1_83182"]
[ext_resource type="Script" path="res://Scripts/sceneloader.gd" id="1_b7x1o"]
[ext_resource type="Texture2D" uid="uid://803yb07wdkcn" path="res://Art/background/3840x2160-black-solid-color-background.jpg" id="1_triu7"]
[ext_resource type="TileSet" uid="uid://cya47ra4sng0t" path="res://Scenes/tileset_game.tres" id="2_7oscs"]
[ext_resource type="Texture2D" uid="uid://qe3wjokbcblt" path="res://Art/printer_asleep.png" id="3_t3ca1"]
[ext_resource type="PackedScene" uid="uid://ce2b4mv8y2x08" path="res://Scenes/playercharacter.tscn" id="4_8dt04"]
[ext_resource type="AudioStream" uid="uid://b4jekbqchxlgy" path="res://Music/floor2_theme.mp3" id="7_10qom"]
[ext_resource type="Texture2D" uid="uid://ju7yc7fns3lr" path="res://Art/printer_awake.png" id="8_dvrpf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2lq4"]
size = Vector2(64, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmpgt"]
size = Vector2(66, 2)

[node name="level2" type="Node"]
script = ExtResource("1_83182")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1193.0
offset_top = -672.0
offset_right = 727.0
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
texture = ExtResource("1_triu7")
stretch_mode = 1

[node name="Loader" type="Node" parent="."]
script = ExtResource("1_b7x1o")

[node name="TileMap" type="TileMap" parent="." groups=["navigation"]]
tile_set = ExtResource("2_7oscs")
format = 2
layer_0/name = "ground"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(196608, 196608, 3, 262144, 196608, 3, 327680, 262144, 3, 196609, 65536, 3, 262145, 65536, 3, 196610, 65536, 3, 262146, 65536, 3, 196611, 65536, 3, 262147, 65536, 3, 196612, 65536, 3, 262148, 65536, 3, 196613, 65536, 3, 262149, 65536, 3, 196614, 65536, 3, 262150, 65536, 3, 196615, 65536, 3, 262151, 65536, 3, 196616, 65536, 3, 262152, 65536, 3, 196617, 65536, 3, 262153, 65536, 3, 196618, 65536, 3, 262154, 65536, 3, 196619, 65536, 3, 262155, 65536, 3, 196620, 65536, 3, 262156, 65536, 3, 196621, 65536, 3, 262157, 65536, 3, 327681, 196608, 2, 327682, 196608, 2, 327683, 196608, 2, 327684, 196608, 2, 327685, 196608, 2, 327686, 196608, 2, 327687, 196608, 2, 327688, 196608, 2, 327689, 196608, 2, 327690, 196608, 2, 327691, 196608, 2, 327692, 196608, 2, 327693, 196608, 2, 14, 131072, 4, 65550, 131072, 4, 131086, 131072, 4, 16, 131077, 0, 65552, 131077, 1, 131088, 131077, 1, 196622, 65536, 3, 196623, 65536, 3, 196624, 65536, 3, 196625, 65536, 3, 262161, 65536, 3, 262160, 65536, 3, 262159, 65536, 3, 262158, 65536, 3, 327694, 196608, 2, 327695, 196608, 2, 327696, 196608, 2, 327697, 196608, 2, 327710, 327680, 3, 196638, 131072, 2, 262174, 131072, 2, 327698, 196608, 2, 327699, 196608, 2, 327700, 196608, 2, 327701, 196608, 2, 327702, 196608, 2, 327703, 196608, 2, 327704, 196608, 2, 327705, 196608, 2, 327706, 196608, 2, 327707, 196608, 2, 327708, 196608, 2, 327709, 196608, 2, 196626, 65536, 3, 262162, 65536, 3, 196627, 65536, 3, 262163, 65536, 3, 196628, 65536, 3, 262164, 65536, 3, 196629, 65536, 3, 262165, 65536, 3, 196630, 65536, 3, 262166, 65536, 3, 196631, 65536, 3, 262167, 65536, 3, 196632, 65536, 3, 262168, 65536, 3, 196633, 65536, 3, 262169, 65536, 3, 196634, 65536, 3, 262170, 65536, 3, 196635, 65536, 3, 262171, 65536, 3, 196636, 65536, 3, 262172, 65536, 3, 196637, 65536, 3, 262173, 65536, 3)
layer_1/name = "ysort"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(0, 786432, 0, 1, 851968, 0, 2, 851968, 0, 3, 851968, 0, 4, 851968, 0, 5, 851968, 0, 6, 851968, 0, 7, 851968, 0, 8, 851968, 0, 9, 851968, 0, 10, 851968, 0, 11, 851968, 0, 12, 851968, 0, 13, 851968, 0, 65536, 786432, 2, 65537, 1245184, 1, 65538, 1245184, 1, 65539, 1245184, 1, 65540, 1245184, 1, 65541, 1245184, 1, 65542, 1245184, 1, 65543, 1245184, 1, 65544, 1245184, 1, 65545, 1245184, 1, 65546, 1245184, 1, 65547, 1245184, 1, 65548, 1245184, 1, 65549, 1245184, 1, 131072, 0, 4, 131073, 917504, 1, 131074, 1245184, 1, 131075, 786432, 1, 131076, 917504, 1, 131077, 1245184, 1, 131078, 786432, 1, 131079, 917504, 1, 131080, 1245184, 1, 131081, 1245184, 1, 131082, 1245184, 1, 131083, 1245184, 1, 131084, 786432, 1, 131085, 917504, 1, 18, 851968, 0, 19, 851968, 0, 20, 851968, 0, 21, 851968, 0, 22, 851968, 0, 23, 851968, 0, 24, 851968, 0, 25, 851968, 0, 26, 851968, 0, 27, 851968, 0, 28, 851968, 0, 29, 851968, 0, 30, 917504, 0, 65566, 851968, 2, 65554, 1245184, 1, 65555, 1245184, 1, 65556, 1245184, 1, 65557, 1245184, 1, 65558, 1245184, 1, 65559, 1245184, 1, 65560, 1245184, 1, 65561, 1245184, 1, 65562, 1245184, 1, 65563, 1245184, 1, 65564, 1245184, 1, 65565, 1245184, 1, 131090, 786432, 1, 131102, 65536, 4, 131091, 851968, 1, 131092, 917504, 1, 131093, 1245184, 1, 131094, 786432, 1, 131095, 917504, 1, 131096, 1245184, 1, 131097, 786432, 1, 131098, 917504, 1, 131099, 1245184, 1, 131100, 1245184, 1, 131101, 786432, 1, 17, 196613, 0, 65553, 196613, 1, 131089, 196613, 1, 131087, 196608, 4, 65551, 196608, 4, 15, 196608, 4)
layer_2/name = "interactables"
layer_2/tile_data = PackedInt32Array(65544, 196611, 2, 131080, 196611, 3, 65545, 262147, 2, 131081, 262147, 3, 65546, 196611, 2, 131082, 196611, 3, 65547, 262147, 2, 131083, 262147, 3, 65541, 983040, 0, 131077, 983040, 1, 65538, 983040, 0, 131074, 983040, 1, 65549, 655363, 3, 65557, 1114112, 0, 131093, 1114112, 1, 65560, 1179648, 0, 131096, 1179648, 1, 65563, 196611, 2, 131099, 196611, 3, 65564, 262147, 2, 131100, 262147, 3, 262156, 655363, 4, 262148, 589827, 4, 262173, 589827, 4, 65554, 589827, 2, 65555, 655363, 2, 65556, 720899, 2, 65562, 589827, 3)

[node name="PrinterGoesHere" type="Sprite2D" parent="."]
position = Vector2(313, 42)
scale = Vector2(0.907608, 0.907608)
texture = ExtResource("3_t3ca1")

[node name="Label" type="Label" parent="PrinterGoesHere"]
offset_left = -24.2395
offset_top = -31.9521
offset_right = 155.76
offset_bottom = 17.0479
scale = Vector2(0.3, 0.3)
uppercase = true

[node name="PrinterJacked" type="Sprite2D" parent="."]
visible = false
position = Vector2(313, 34)
texture = ExtResource("8_dvrpf")

[node name="playercharacter" parent="." instance=ExtResource("4_8dt04")]
position = Vector2(264, 17)
scale = Vector2(0.907608, 0.907608)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(256, 0)
shape = SubResource("RectangleShape2D_a2lq4")

[node name="FightPrinter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FightPrinter"]
position = Vector2(290, 51)
shape = SubResource("RectangleShape2D_lmpgt")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_10qom")
volume_db = -20.0
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="body_entered" from="Area2D" to="playercharacter" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="playercharacter" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="FightPrinter" to="playercharacter" method="_on_fight_printer_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
